--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "tailwindcss -i ./input.css -o ./output.css",
+    "build": "tailwindcss -i ./input.css -o ./output.css --minify",
     "dev": "tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "devDependencies": {
