--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-    "build": "tailwindcss -i ./input.css -o ./output.css --minify",
-    "dev": "tailwindcss -i ./input.css -o ./output.css --watch"
+    "build": "npx @tailwindcss/cli -i ./input.css -o ./output.css --minify",
+    "dev": "npx @tailwindcss/cli -i ./input.css -o ./output.css --watch"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "4.0.3",
     "@tailwindcss/typography": "0.5.16",
-    "tailwindcss": "3.4.17"
+    "tailwindcss": "4.0.3"
   }
 }
